--- a/Projects/Project 1/style.css
+++ b/Projects/Project 1/style.css
@@ -63,12 +63,6 @@ a {
   text-decoration: none;
 }
 
-.bg_blur {
-  position: absolute;
-  box-shadow: 0 0 1000px 50px var(--secondary-color);
-  z-index: -1;
-}
-
 body {
   font-family: "Poppins", sans-serif;
   background-color: var(--primary-color);
@@ -231,4 +225,377 @@ nav {
 
 .card a:hover {
   color: var(--secondary-color);
+}
+
+.class_container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+}
+
+.class_image {
+  position: relative;
+}
+
+.class_image .class_img-1 {
+  position: absolute;
+  right: 0;
+  top: 0;
+  max-width: 500px;
+  border-radius: 10px;
+}
+
+.class_image .class_img-2 {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  max-width: 300px;
+  border-radius: 10px;
+}
+
+.class_content {
+  padding: 2rem 0;
+}
+
+.class_content .section_header {
+  text-align: left;
+  max-width: 400px;
+}
+
+.class_content p {
+  margin-bottom: 4rem;
+  color: var(--text-light);
+}
+
+.join_image {
+  margin-top: 4rem;
+  position: relative;
+}
+
+.join_image img {
+  border-radius: 10px;
+}
+
+.join_grid {
+  position: absolute;
+  bottom: -5rem;
+  width: calc(100% - 4rem);
+  padding: 2rem;
+  margin: 0 2rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+  background-color: var(--primary-color-light);
+  border-radius: 10px;
+}
+
+.join_card {
+  flex: 1 1 250px;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.join_card span {
+  padding: 5px 12px;
+  font-size: 1.75rem;
+  color: var(--white);
+  background-color: var(--secondary-color-dark);
+  border-radius: 5px;
+}
+
+.join_card h4 {
+  margin-bottom: 0.5rem;
+  font-size: 1.2rem;
+  font-weight: 500;
+  color: var(--white);
+}
+
+.join_card p {
+  color: var(--text-light);
+}
+
+.price_grid {
+  margin-top: 4rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2rem;
+}
+
+.price_card {
+  padding: 3rem 2rem;
+  display: flex;
+  flex-direction: column;
+  background-color: var(--primary-color-light);
+  border: 2px solid transparent;
+  border-radius: 10px;
+  transition: 0.3s;
+}
+
+.price_card:hover {
+  background-color: var(--primary-color-extra-light);
+  border-color: var(--secondary-color);
+}
+
+.price_card_content {
+  flex: 1;
+  margin-bottom: 2rem;
+}
+
+.price_card h4 {
+  margin-bottom: 1rem;
+  font-size: 1.2rem;
+  font-weight: 500;
+  color: var(--white);
+}
+
+.price_card h3 {
+  padding-bottom: 1rem;
+  margin-bottom: 2rem;
+  font-size: 2rem;
+  font-weight: 600;
+  color: var(--white);
+  border-bottom: 2px solid var(--white);
+}
+
+.price_card p {
+  margin-bottom: 0.75rem;
+  color: var(--white);
+}
+
+.price_card p i {
+  margin-right: 0.5rem;
+  font-size: 1.2rem;
+  color: var(--secondary-color);
+}
+
+.price_btn {
+  color: var(--secondary-color);
+  background-color: transparent;
+  border: 2px solid var(--secondary-color);
+}
+
+.price_btn:hover {
+  color: var(--white);
+  background-color: var(--secondary-color);
+}
+
+.review {
+  background-color: var(--primary-color-light);
+}
+
+.review_container {
+  display: flex;
+  gap: 2rem;
+}
+
+.review_container > span {
+  font-size: 6rem;
+  color: var(--secondary-color);
+  opacity: 0.5;
+}
+
+.review_content {
+  flex: 1;
+}
+
+.review_content h4 {
+  margin-bottom: 1rem;
+  font-size: 1.3rem;
+  font-weight: 600;
+  color: var(--white);
+}
+
+.review_content p {
+  max-width: 800px;
+  margin-bottom: 2rem;
+  color: var(--text-light);
+}
+
+.review_rating span {
+  font-size: 1.5rem;
+  color: var(--secondary-color);
+}
+
+.review_footer {
+  margin-top: 4rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 2rem;
+}
+
+.review_member {
+  display: flex;
+  align-items: flex-start;
+  gap: 1rem;
+}
+
+.review_member img {
+  max-width: 60px;
+  border-radius: 100%;
+}
+
+.review_member_details h4 {
+  margin-bottom: 0;
+}
+
+.review_nav {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
+
+.review_nav span {
+  font-size: 2rem;
+  color: var(--secondary-color);
+  cursor: pointer;
+}
+
+.footer_container {
+  position: relative;
+  display: grid;
+  grid-template-columns: 400px repeat(3, 1fr);
+  gap: 2rem;
+}
+
+.footer_blur {
+  bottom: 0;
+  right: 0;
+}
+
+.footer_logo {
+  max-width: 150px;
+  margin-bottom: 2rem;
+}
+
+.footer_col p {
+  margin-bottom: 2rem;
+  color: var(--text-light);
+}
+
+.footer_socials {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.footer_socials a {
+  padding: 5px 10px;
+  font-size: 1.25rem;
+  color: var(--secondary-color);
+  border: 1px solid var(--secondary-color);
+  border-radius: 100%;
+  transition: 0.3s;
+}
+
+.footer_socials a:hover {
+  color: var(--white);
+  background-color: var(--secondary-color);
+}
+
+.footer_col h4 {
+  margin-bottom: 2rem;
+  font-size: 1.2rem;
+  font-weight: 500;
+  color: var(--white);
+}
+
+.footer_col > a {
+  display: block;
+  margin-bottom: 1rem;
+  color: var(--text-light);
+  transition: 0.3s;
+}
+
+.footer_col > a:hover {
+  color: var(--secondary-color);
+}
+
+.footer_bar {
+  max-width: var(--max-width);
+  margin: auto;
+  padding: 1rem;
+  font-size: 0.8rem;
+  color: var(--white);
+}
+
+@media (width < 900px) {
+  .nav_links {
+    display: none;
+  }
+
+  .header_container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .header_image {
+    grid-area: 1/1/2/2;
+  }
+
+  .explore_grid {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+  }
+
+  .class_container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .class_image {
+    min-height: 500px;
+  }
+
+  .price_grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .review_container {
+    gap: 2rem;
+  }
+
+  .footer_container {
+    grid-template-columns: 1fr 200px;
+  }
+}
+
+@media (width < 600px) {
+  .explore_header {
+    flex-direction: column;
+  }
+
+  .explore_grid {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .join_container {
+    margin-bottom: 15rem;
+  }
+
+  .join_grid {
+    width: 100%;
+    margin: 0;
+    bottom: -20rem;
+  }
+
+  .price_grid {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .review_container {
+    flex-direction: column;
+    gap: 0;
+  }
+
+  .review_footer {
+    flex-direction: column;
+  }
+
+  .footer_container {
+    grid-template-columns: 1fr 150px;
+  }
+
+  .footer_bar {
+    text-align: center;
+  }
 }
