--- a/Projects/Project 2/assets/css/style.css
+++ b/Projects/Project 2/assets/css/style.css
@@ -888,8 +888,27 @@ nav.navbar.bootsnav .navbar-toggle i{color: #ff545a;}
     -ms-transition:.3s; 
     -o-transition:.3s;
     transition: .3s;
+    display: grid;
 }
-.single-blog-item-txt {padding:  25px 28px 27px;}
+
+.single-blog-item-img {
+    grid-column: 1;
+}
+
+.single-blog-item-txt {
+    padding:  25px 28px 27px;
+    grid-column: 2;
+}
+
+#single-blog-item-btn {
+    border: none;
+    padding-top: 20px;
+}
+
+#more {
+    display: none;
+}
+
 .single-blog-item-txt h2 a {text-transform:  initial;line-height: 1.8;}
 .single-blog-item-txt h4 {
     font-size:  14px;
