--- a/Projects/Project 2/assets/css/style.css
+++ b/Projects/Project 2/assets/css/style.css
@@ -142,131 +142,6 @@ html,body{height: 100%;}
 /*=============Style css=========*/
 
 
-
-/*-------------------------------------
-        3. Modal Form
---------------------------------------
-.modal {
-    display: none;
-    position: fixed; 
-    z-index: 100; 
-    left: 0;
-    top: 0;
-    width: 100%; 
-    height: 100%; 
-    overflow: auto; 
-    background-color: rgb(0,0,0); 
-    background-color: rgba(0,0,0,0.4); 
-    padding-top: 60px;
-}
-
-.close.psw {
-    float: right;
-    padding-top: 16px;
-}
-
-.modal-content {
-    max-height: calc(100% - 120px);
-    width: 400px;
-    background-color: rgba(255,255,255,0.13);
-    position: absolute;
-    transform: translate(-50%,-50%);
-    top: 50%;
-    left: 50%;
-    border-radius: 10px;
-    backdrop-filter: blur(10px);
-    border: 2px solid rgba(255,255,255,0.1);
-    box-shadow: 0 0 40px rgba(8,7,16,0.6);
-    padding: 50px 35px;
-    letter-spacing: 0.5px;
-    outline: none;
-    border: none;
-    color: #ffffff;
-} 
-
-.modal-content h3 {
-    font-size: 32px;
-    font-weight: 500;
-    line-height: 42px;
-    text-align: center;
-    color: white;
-}
-
-label{
-    display: block;
-    margin-top: 30px;
-    font-size: 16px;
-    font-weight: 500;
-}
-
-input{
-    display: block;
-    height: 50px;
-    width: 100%;
-    background-color: rgba(255,255,255,0.07);
-    border-radius: 3px;
-    padding: 0 10px;
-    margin-top: 8px;
-    font-size: 14px;
-    font-weight: 300;
-}
-::placeholder{
-    color: #e5e5e5;
-}
-.formBtn {
-    margin-top: 50px;
-    width: 100%;
-    background-color: #ffffff;
-    color: #080710;
-    padding: 15px 0;
-    font-size: 18px;
-    font-weight: 600;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.formBtn:hover {
-    background-color: #ff545a;
-}
-
-.social{
-  margin-top: 30px;
-  display: flex;
-}
-.social div{
-  width: 150px;
-  border-radius: 3px;
-  padding: 5px 10px 10px 5px;
-  background-color: rgba(255,255,255,0.27);
-  color: #eaf0fb;
-  text-align: center;
-}
-.social div:hover{
-  background-color: rgba(255,255,255,0.47);
-}
-.social .fb{
-  margin-left: 25px;
-}
-.social i{
-  margin-right: 4px;
-}
-
-.close {
-    /* Position it in the top right corner outside of the modal 
-    position: absolute;
-    right: 25px;
-    top: 25px;
-    color: #000;
-    font-size: 35px;
-    font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-    color: red;
-    cursor: pointer;
-} 
-
 /*-------------------------------------
         4. Top-area
 --------------------------------------*/
@@ -1061,7 +936,6 @@ nav.navbar.bootsnav .navbar-toggle i{color: var(--highlight);}
 /*appsLand-btn*/
 .appsLand-btn {
     position: absolute;
-    top: 8px;
     right: 0;
     background: var(--highlight);
     display: inline-block;
@@ -1204,4 +1078,9 @@ nav.navbar.bootsnav .navbar-toggle i{color: var(--highlight);}
 
 .list-group-item {
     margin: 20px 0 20px 0;
+}
+
+.account {
+    padding:117px 0 95px;
+    background: var(--background-primary);
 }
