--- a/Projects/Project 2/assets/css/style.css
+++ b/Projects/Project 2/assets/css/style.css
@@ -166,7 +166,7 @@ nav.navbar.bootsnav {
 /*.navbar-brand*/
 
 /*.nav li*/
-nav.navbar.bootsnav ul.nav > li > a {
+nav.navbar.bootsnav ul.nav > li > a , nav.navbar.bootsnav ul.nav > li > button {
     color: var(--text-color);
     font-size: 14px;
     font-weight: 500;
@@ -177,7 +177,7 @@ nav.navbar.bootsnav ul.nav > li > a {
     -o-transition: 0.3s linear; 
     transition: 0.3s linear;
 }
-nav.navbar.bootsnav ul.nav > li > a {padding:34px 21px;}
+nav.navbar.bootsnav ul.nav > li > a , nav.navbar.bootsnav ul.nav > li > button {padding:34px 21px;}
 nav.navbar.bootsnav ul.nav > li > a:hover,nav.navbar.bootsnav ul.nav > li > a:focus{color: var(--highlight);}
 nav.navbar.bootsnav ul.nav > li.active>a {color: var(--highlight);}
 
@@ -1078,9 +1078,85 @@ nav.navbar.bootsnav .navbar-toggle i{color: var(--highlight);}
 
 .list-group-item {
     margin: 20px 0 20px 0;
+    background-color: var(--background-primary);
 }
 
 .account {
     padding:117px 0 95px;
     background: var(--background-primary);
+    height: 100vh;
 }
+
+.account-submit-btn {
+    background-color: var(--highlight); 
+    color: var(--background-primary);
+    cursor: pointer;
+    -webkit-transition:0.3s ease-in-out;
+    -moz-transition:0.3s ease-in-out;
+    -o-transition:0.3s ease-in-out;
+    transition:0.3s ease-in-out;
+    height: 40px;
+    width: 80px;
+    align-items: center;
+}
+
+.account-submit-btn:hover {
+    box-shadow:0 5px 10px rgba(71,71,71,.4);
+    color: var(--background-primary);
+    background: #f43032;
+}
+
+#myForm input {
+    background-color: var(--background-primary);
+}
+
+#myForm input::placeholder {
+    color: var(--text-color);
+}
+
+.accordion-container {
+    padding-top: 40px;
+}
+
+.accordion {
+    background-color: var(--background-primary);
+    color: var(--text-color);
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
+  }
+  
+  .active-panel, .accordion:hover {
+    background-color: var(--highlight);
+    color: #fff;
+  }
+  
+  .accordion:after {
+    content: '\2B9F';
+    color: var(--header-text-color);
+    font-weight: bold;
+    float: right;
+    margin-left: 5px;
+  }
+  
+  .active-panel:after {
+    content: "\2B9D";
+    color: #fff;
+  }
+  
+  .panel {
+    padding: 0 20px;
+    background-color: var(--background-primary);
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+  }
+
+  .panel p {
+    padding: 20px;
+  }
