--- a/Projects/Project 2/assets/css/style.css
+++ b/Projects/Project 2/assets/css/style.css
@@ -178,8 +178,7 @@ nav.navbar.bootsnav ul.nav > li > a , nav.navbar.bootsnav ul.nav > li > button {
     transition: 0.3s linear;
 }
 nav.navbar.bootsnav ul.nav > li > a , nav.navbar.bootsnav ul.nav > li > button {padding:34px 21px;}
-nav.navbar.bootsnav ul.nav > li > a:hover,nav.navbar.bootsnav ul.nav > li > a:focus{color: var(--highlight);}
-nav.navbar.bootsnav ul.nav > li.active>a {color: var(--highlight);}
+nav.navbar.bootsnav ul.nav > li > a:hover{color: var(--highlight);}
 
 nav.navbar.bootsnav ul.nav > li.dropdown > a.dropdown-toggle:after {
     content: "";
