--- a/Projects/Project 2/assets/css/style.css
+++ b/Projects/Project 2/assets/css/style.css
@@ -1199,3 +1199,44 @@ nav.navbar.bootsnav .navbar-toggle i{color: var(--highlight);}
 .hidden {
     display: none;
 }
+
+#logout-button {
+    justify-content:  center;
+    align-items:  center;
+    left: 0;
+    font-size:  14px;
+    color:  var(--background-primary);
+    width:  100px;
+    height:  50px;
+    background:  var(--highlight);
+    margin-left:  30px;
+    border-radius: 3px;
+    -webkit-transition: 0.3s linear; 
+    -moz-transition: 0.3s linear; 
+    -ms-transition: 0.3s linear; 
+    -o-transition: 0.3s linear; 
+    transition: 0.3s linear;
+}
+
+#edit-profile-btn {
+    justify-content:  center;
+    align-items:  center;
+    left: 0;
+    font-size:  14px;
+    color:  var(--highlight);
+    width:  100px;
+    height:  50px;
+    background:  var(--background-primary);
+    margin-left:  30px;
+    border-radius: 3px;
+    border-color: var(--highlight);
+    -webkit-transition: 0.3s linear; 
+    -moz-transition: 0.3s linear; 
+    -ms-transition: 0.3s linear; 
+    -o-transition: 0.3s linear; 
+    transition: 0.3s linear;
+}
+
+#profile-section p {
+    padding: 30px;
+}
